--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "wedding-countdown",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "description": "A wedding countdown with OpenAI-generated messages",
+  "main": "api/server.js",  
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node api/server.js",  
+    "dev": "nodemon api/server.js"  
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
